--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&display=swap"
+      rel="stylesheet"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
